--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 flask 
-flask-sqlalchemy 
 mysqlclient
-
+Flask-Login==0.4.1
+Flask-Migrate==2.1.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+flask-login
+flask-sqlalchemy
